--- a/src/app/groen/groen.component.html
+++ b/src/app/groen/groen.component.html
@@ -1,25 +1,38 @@
+<ng-template [ngIf]= "showModal == true" >
+  <div class="modal-header">
+    <h4 class="modal-title">Modal title</h4>
+    <button type="button" class="close" aria-label="Close" (click)="closeModal()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <p>One fine body&hellip;</p>
+    <form>
+      <div class="form-group">
+        <label for="exampleFormControlSelect1">Example select</label>
+        <select class="form-control" id="exampleFormControlSelect1" [(ngModel)]="rate" name="rate" >
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlInput1">Naam</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="name" [(ngModel)]="name" name="name">
+      </div>
+      <div class="form-group">
+          <label for="exampleFormControlInput2">Emailaddres</label>
+        <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="name@example.com"  [(ngModel)]="email" name="email">
+      </div>
+      <button type="button" class="btn btn-primary" (click)="sendData()">Submit</button>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="closeModal()">Close</button>
+  </div>
+</ng-template>
 <div class="container">
-  <form>
-
-    <div class="form-group">
-      <label for="exampleFormControlSelect1">Example select</label>
-      <select class="form-control" id="exampleFormControlSelect1">
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-      </select>
-    </div>
-    <div class="form-group">
-      <label for="exampleFormControlInput1">Naam</label>
-      <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="name">
-    </div>
-    <div class="form-group">
-      <label for="exampleFormControlInput2">Emailaddres</label>
-      <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="name@example.com">
-    </div>
-
-    <button type="button" class="btn btn-primary">Hier ff klikken</button>
-  </form>
+  <button type="button" class="btn btn-primary" (click)="openModal()" *ngIf= "showModal == false">Hier ff klikken</button>
 </div>
