--- a/src/app/oranje/oranje.component.html
+++ b/src/app/oranje/oranje.component.html
@@ -1,13 +1,15 @@
 <h2>oranje</h2>
 
 <ul class="col-md-4">
-  <li *ngFor="let item of megamenu">
-    <a href="#" (click)="subMenu()">{{item.text}}</a>
-     {{item.sub}}
-    </li>
-
+  <li *ngFor="let item of mainMenuItems">
+    <a href="{{item.url}}" (click)="subMenu({name:item.text,sub:item.sub  ? item.sub:[],subTitle:item.caption})">{{item.text}}</a>
+  </li>
 </ul>
-<!-- <div *ngIf="currentStatus>-1" class="col-md-8 right-section">
-  <h2>{{ people[currentStatus]?.name }}</h2>
-  <img [src]="people[currentStatus]?.img" class="img-responsive"/>
-</div> -->
+<ng-container *ngIf="subMenuItems.length>0">
+<h2 >{{subTitle}}</h2>
+<ul class="col-md-4" >
+  <li *ngFor="let subItem of subMenuItems">
+    <a href="{{subItem.url}}" >{{subItem.text}}</a>
+  </li>
+</ul>
+</ng-container>
